Added UG translation

--- a/po/ug.po
+++ b/po/ug.po
@@ -7,13 +7,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.10\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
-"product=yelp&component=general\n"
-"POT-Creation-Date: 2010-10-25 07:38+0000\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=yelp&component=general\n"
+"POT-Creation-Date: 2010-11-03 00:19+0000\n"
 "PO-Revision-Date: 2010-10-27 10:36+0600\n"
 "Last-Translator: Sahran <sahran@live.com>\n"
-"Language-Team: GNOME Uighur Translation Project <gnome-uighur@yahoogroups."
-"com>\n"
+"Language-Team: GNOME Uighur Translation Project <gnome-uighur@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -39,7 +37,7 @@ msgstr "BTL فۇنكسىيىلىرى"
 
 #: ../data/man.xml.in.h:3
 msgid "Configuration Files"
-msgstr "سەپلىمە ھۆججەتلىرى"
+msgstr "سەپلىمە ھۆججەتلەر"
 
 #: ../data/man.xml.in.h:4
 msgid "Curses Functions"
@@ -59,7 +57,7 @@ msgstr "ئويۇنلار"
 
 #: ../data/man.xml.in.h:8
 msgid "Hardware Devices"
-msgstr "قاتتىق دېتال زاپچاسلىرى"
+msgstr "قاتتىق دېتال ئۈسكۈنىلىرى"
 
 #: ../data/man.xml.in.h:9
 msgid "Kernel Routines"
@@ -71,7 +69,7 @@ msgstr "قوللانما بەتلىرى"
 
 #: ../data/man.xml.in.h:11
 msgid "Network Audio Sound Functions"
-msgstr "توردىكى ئۈن ئاۋاز فۇنكسىيىسى"
+msgstr "تور ئۈن-ئاۋاز فۇنكسىيىسى"
 
 #: ../data/man.xml.in.h:12
 msgid "OpenSSL Applications"
@@ -79,11 +77,11 @@ msgstr "OpenSSL پروگراممىلىرى"
 
 #: ../data/man.xml.in.h:13
 msgid "OpenSSL Configuration"
-msgstr "OpenSSLنىڭ سەپلىمىسى"
+msgstr "OpenSSL سەپلىمىسى"
 
 #: ../data/man.xml.in.h:14
 msgid "OpenSSL Functions"
-msgstr "OpenSSL نىڭ فۇنكسىيىلىرى"
+msgstr "OpenSSL  فۇنكسىيىلىرى"
 
 #: ../data/man.xml.in.h:15
 msgid "OpenSSL Overviews"
@@ -247,7 +245,7 @@ msgstr "سىستېما چاقىرىش"
 
 #: ../data/man.xml.in.h:55
 msgid "System V Form/Menu Functions"
-msgstr "System V جەدۋەل/تىزىملىك فۇنكسىيىسى"
+msgstr "System V كۆزنەك/تىزىملىك فۇنكسىيىسى"
 
 #: ../data/man.xml.in.h:56
 msgid "TIFF Functions"
@@ -287,7 +285,7 @@ msgstr "X11 نىڭ قىسقىچە چۈشەندۈرۈلۈشى"
 
 #: ../data/toc.xml.in.h:1
 msgid "2D Graphics"
-msgstr "2D گرافىكلىرى"
+msgstr "2D گرافىكى"
 
 #: ../data/toc.xml.in.h:2
 msgid "3D Graphics"
@@ -295,7 +293,7 @@ msgstr "3D گرافىكى"
 
 #: ../data/toc.xml.in.h:3
 msgid "Accessibility"
-msgstr "قوشۇمچە ئىقتىدار"
+msgstr "ياردەم ئىقتىدارى"
 
 #: ../data/toc.xml.in.h:4
 msgid "Action Games"
@@ -311,15 +309,15 @@ msgstr "كۆڭۈل خۇشلۇقى"
 
 #: ../data/toc.xml.in.h:7
 msgid "Applications for viewing and manipulating graphics"
-msgstr "گرافىك كۆرۈش ۋە بىر تەرەپ قىلىشقا ئىشلىتىدىغان قوللىنىشچان پروگرامما"
+msgstr "گرافىك كۆرۈش ۋە بىر تەرەپ قىلىشقا ئىشلىتىدىغان پروگرامما"
 
 #: ../data/toc.xml.in.h:8
 msgid "Applications related to audio and video"
-msgstr "ئۈن ۋە سىنغا باغلىنىشلىق پروگرامما"
+msgstr "ئۈن ۋە سىنغا مۇناسىۋەتلىك پروگرامما"
 
 #: ../data/toc.xml.in.h:9
 msgid "Applications that teach or aid in learning"
-msgstr "مائارىپ ۋە ئوقۇتۇشتا ياردەمچى قوللىنىشچان پروگرامما"
+msgstr "مائارىپ ۋە ئوقۇتۇشتا ياردەمچى پروگرامما"
 
 #: ../data/toc.xml.in.h:10
 msgid "Arcade Games"
@@ -351,7 +349,7 @@ msgstr "خىش ئويۇنى"
 
 #: ../data/toc.xml.in.h:17
 msgid "Board Games"
-msgstr "شاھمات تاختىسى ئويۇنى"
+msgstr "تاختاي ئويۇنلىرى"
 
 #: ../data/toc.xml.in.h:18
 msgid "Building"
@@ -411,15 +409,15 @@ msgstr "ساندان"
 
 #: ../data/toc.xml.in.h:32
 msgid "Debuggers"
-msgstr "سازلىغۇچ"
+msgstr "سازلىغۇچلار"
 
 #: ../data/toc.xml.in.h:33
 msgid "Desktop"
-msgstr "ئۈستەل ئۈستى"
+msgstr "ئۈستەليۈزى"
 
 #: ../data/toc.xml.in.h:34
 msgid "Desktop Settings"
-msgstr "ئۈستەل ئۈستى تەڭشىكى"
+msgstr "ئۈستەليۈزى تەڭشىكى"
 
 #: ../data/toc.xml.in.h:36
 msgid "Dialup"
@@ -432,7 +430,7 @@ msgstr "لۇغەتلەر"
 #. Translators: this is a menu title for burning audio and video to dics
 #: ../data/toc.xml.in.h:39
 msgid "Disc Burning"
-msgstr "دىسكا ئويۇش"
+msgstr "دىسكىغا يېزىش"
 
 #: ../data/toc.xml.in.h:40
 msgid "Economy"
@@ -448,7 +446,7 @@ msgstr "ئېلېكتر"
 
 #: ../data/toc.xml.in.h:43
 msgid "Electronics"
-msgstr "ئېلېكترون ئىلمى"
+msgstr "ئېلېكترونىكا"
 
 #: ../data/toc.xml.in.h:44
 msgid "Email Tools"
@@ -464,7 +462,7 @@ msgstr "ئىنژېنېرلىق ئىلمى"
 
 #: ../data/toc.xml.in.h:47
 msgid "File Manager"
-msgstr "ھۆججەت باشقۇرغۇچ"
+msgstr "ھۆججەت باشقۇرغۇ"
 
 #: ../data/toc.xml.in.h:48
 msgid "File Tools"
@@ -488,7 +486,7 @@ msgstr "تەرتىپ دىئاگرامما قورالى"
 
 #: ../data/toc.xml.in.h:53
 msgid "GNOME Applications"
-msgstr "GNOME پروگراممىلىرى"
+msgstr "GNOME  پروگراممىلىرى"
 
 #: ../data/toc.xml.in.h:54
 msgid "GTK"
@@ -496,11 +494,11 @@ msgstr "GTK"
 
 #: ../data/toc.xml.in.h:55
 msgid "GUI Designers"
-msgstr "ئىشلەتكۈچى ئارايۈز لايىھىلىگۈچى"
+msgstr "ئىشلەتكۈچى كۆرۈنمە يۈز لايىھىلىگۈچى"
 
 #: ../data/toc.xml.in.h:57
 msgid "Generic applications for the GNOME environment"
-msgstr "GNOME مۇھىتىدىكى ئادەتتىكى قوللىنىشچان پروگراممىلار"
+msgstr "GNOME مۇھىتىدىكى ئادەتتىكى پروگراممىلار"
 
 #: ../data/toc.xml.in.h:58
 msgid "Generic applications for the KDE environment"
@@ -520,7 +518,7 @@ msgstr "يەر شارى ئىلمى"
 
 #: ../data/toc.xml.in.h:62
 msgid "Graphics"
-msgstr "گرافىكلار"
+msgstr "گرافىك"
 
 #: ../data/toc.xml.in.h:63
 msgid "Guides and manuals for applications that connect to the outside world"
@@ -528,7 +526,7 @@ msgstr "توردىكى پروگرامما قوللانمىسى ۋە ياردىم
 
 #: ../data/toc.xml.in.h:64
 msgid "Guides for getting involved in development"
-msgstr "پروگرامما ئىجادىيىتىگە مۇناسىۋەتلىك كۆرسەتمىلەر"
+msgstr "ئىجادىيەتكە قاتنىشىشقا مۇناسىۋەتلىك كۆرسەتمىلەر"
 
 #: ../data/toc.xml.in.h:65
 msgid "Ham Radio"
@@ -572,7 +570,7 @@ msgstr "Java"
 
 #: ../data/toc.xml.in.h:75
 msgid "KDE Applications"
-msgstr "KDE قوللىنىشچان پروگراممىلىرى"
+msgstr "KDE پروگراممىلىرى"
 
 #: ../data/toc.xml.in.h:76
 msgid "Kids Games"
@@ -582,9 +580,7 @@ msgstr "بالىلار ئويۇنلىرى"
 msgid ""
 "Learn more about making your system more accessible for a range of "
 "disabilities"
-msgstr ""
-"قانداق قىلغاندا كومپيۇتېرىڭىزنى تېخىمۇ كۆپ مېيىپلەرنىڭ ئىشلىتىشى ھەققىدە "
-"چۈشىنىڭ"
+msgstr "سىستېمىڭىزنى تېخىمۇ كۆپ مېيىپلەرنىڭ ئىشلىتىشى ئۈچۈن ئىزدىنىپ كۆرۈڭ"
 
 #: ../data/toc.xml.in.h:78
 msgid "Licenses"
@@ -616,7 +612,7 @@ msgstr "باشقا پۈتۈكلەر"
 
 #: ../data/toc.xml.in.h:85
 msgid "Mixers"
-msgstr "ئاۋاز تەڭشىگۈچ"
+msgstr "كىرىشتۈرگۈچىلەر"
 
 #: ../data/toc.xml.in.h:86
 msgid "Monitor"
@@ -644,7 +640,7 @@ msgstr "OCR"
 
 #: ../data/toc.xml.in.h:92
 msgid "Office Applications"
-msgstr "ئىشخانا قوللىنىشچان پروگراممىلىرى"
+msgstr "ئىشخانا پروگراممىلىرى"
 
 #: ../data/toc.xml.in.h:93
 msgid "Office applications"
@@ -652,7 +648,7 @@ msgstr "ئىشخانا پروگراممىلىرى"
 
 #: ../data/toc.xml.in.h:94
 msgid "Other Documentation"
-msgstr "باشقا ماقالىلەر"
+msgstr "باشقا پۈتۈكلەر"
 
 #: ../data/toc.xml.in.h:95
 msgid "P2P"
@@ -664,7 +660,7 @@ msgstr "PDA ئالاقىسى"
 
 #: ../data/toc.xml.in.h:97
 msgid "Package Manager"
-msgstr "بوغچا باشقۇرغۇچ"
+msgstr "بوغچا باشقۇرغۇ"
 
 #: ../data/toc.xml.in.h:98
 msgid "Parallel Computing"
@@ -672,7 +668,7 @@ msgstr "پاراللېل ھېسابلاش"
 
 #: ../data/toc.xml.in.h:99
 msgid "Photography"
-msgstr "فوتو سۈرەتچىلىك"
+msgstr "سۈرەتچىلىك"
 
 #: ../data/toc.xml.in.h:100
 msgid "Physics"
@@ -685,7 +681,7 @@ msgstr "ئوينىغۇچى"
 
 #: ../data/toc.xml.in.h:103
 msgid "Presentation Tools"
-msgstr "كۆرسەتمە قورالى"
+msgstr "دوكلات قوراللىرى"
 
 #: ../data/toc.xml.in.h:104
 msgid "Printing"
@@ -709,7 +705,7 @@ msgstr "Qt"
 
 #: ../data/toc.xml.in.h:109
 msgid "Raster Graphics"
-msgstr "نۇر سېتكا گرافىكى"
+msgstr "گرافىك سىزىش"
 
 #. Translators: this is a menu title for audio and video recorders
 #: ../data/toc.xml.in.h:111
@@ -754,9 +750,7 @@ msgstr "تەڭشەكلەر"
 
 #: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
-msgstr ""
-"ئىشلەتكۈچىلەر بۇ تەڭشەكلەرنى ئۆزگەرتىپ مەشغۇلات مۇھىتىنى تېخىمۇ راھەت "
-"قىلالايدۇ"
+msgstr "ئىشلەتكۈچىلەر بۇ تەڭشەكلەرنى ئۆزگەرتىپ مەشغۇلات مۇھىتىنى تېخىمۇ راھەت قىلالايدۇ"
 
 #: ../data/toc.xml.in.h:122
 msgid "Simulation Games"
@@ -836,7 +830,7 @@ msgstr "قوراللار"
 
 #: ../data/toc.xml.in.h:141
 msgid "Utilities to help you get work done"
-msgstr "خىزمىتىڭىزنى تاماملاشقا ياردەم بېرىدىغان ئەمەلىي قوللىنىشچان قورال"
+msgstr "خىزمىتىڭىزنى تاماملاشقا ياردەم بېرىدىغان ئەمەلىي قوراللار"
 
 #: ../data/toc.xml.in.h:142
 msgid "Vector Graphics"
@@ -865,7 +859,7 @@ msgstr "Web ئىجادىيىتى"
 
 #: ../data/toc.xml.in.h:149
 msgid "Welcome to the GNOME Help Browser"
-msgstr "GNOME ياردەم توركۆرگۈگە خۇش كەپسىز"
+msgstr "GNOME ياردەم كۆرگۈگە مەرھابا"
 
 #: ../data/toc.xml.in.h:150
 msgid "Word Processors"
@@ -884,10 +878,10 @@ msgstr "يېتەرلىك ئەسلەك يوق"
 #: ../libyelp/yelp-docbook-document.c:264 ../libyelp/yelp-info-document.c:233
 #: ../libyelp/yelp-mallard-document.c:254
 #: ../libyelp/yelp-mallard-document.c:401 ../libyelp/yelp-man-document.c:269
-#, fuzzy, c-format
+#, c-format
 #| msgid "The page ‘%s was not found in the document ‘%s."
 msgid "The page ‘%s’ was not found in the document ‘%s’."
-msgstr "بەت ‘%s پۈتۈك ‘%s نىڭ ئىچىدىن تېپىلمىدى."
+msgstr ""
 
 #: ../libyelp/yelp-docbook-document.c:298 ../libyelp/yelp-info-document.c:367
 #: ../libyelp/yelp-man-document.c:403
@@ -897,13 +891,13 @@ msgstr "ھۆججەت مەۋجۇت ئەمەس."
 
 #: ../libyelp/yelp-docbook-document.c:308 ../libyelp/yelp-info-document.c:377
 #: ../libyelp/yelp-man-document.c:413
-#, fuzzy, c-format
+#, c-format
 #| msgid "The file ‘%s does not exist."
 msgid "The file ‘%s’ does not exist."
-msgstr "ھۆججەت ‘%s مەۋجۇت ئەمەس."
+msgstr ""
 
 #: ../libyelp/yelp-docbook-document.c:323
-#, fuzzy, c-format
+#, c-format
 #| msgid ""
 #| "The file ‘%s could not be parsed because it is not a well-formed XML "
 #| "document."
@@ -911,10 +905,9 @@ msgid ""
 "The file ‘%s’ could not be parsed because it is not a well-formed XML "
 "document."
 msgstr ""
-"ھۆججەت ‘%s  نىڭ تۈزۈلۈشى ياخشى بولمىغان XML بولغاچقا تەھلىل قىلغىلى بولمىدى."
 
 #: ../libyelp/yelp-docbook-document.c:336
-#, fuzzy, c-format
+#, c-format
 #| msgid ""
 #| "The file ‘%s could not be parsed because one or more of its included "
 #| "files is not a well-formed XML document."
@@ -922,8 +915,6 @@ msgid ""
 "The file ‘%s’ could not be parsed because one or more of its included files "
 "is not a well-formed XML document."
 msgstr ""
-"ھۆججەت ‘%s  نىڭ ئىچىدىكى ھۆججەتلەرنىڭ تۈزۈلۈشى ياخشى بولمىغاچقا تەھلىل "
-"قىلغىلى بولمىدى."
 
 #: ../libyelp/yelp-docbook-document.c:743
 msgid "Unknown"
@@ -931,10 +922,10 @@ msgstr "نامەلۇم"
 
 #: ../libyelp/yelp-docbook-document.c:804 ../libyelp/yelp-info-document.c:310
 #: ../libyelp/yelp-man-document.c:345
-#, fuzzy, c-format
+#, c-format
 #| msgid "The requested page was not found in the document ‘%s."
 msgid "The requested page was not found in the document ‘%s’."
-msgstr "تەلەپ قىلىنغان بەتنى پۈتۈك ‘%s نىڭ ئىچىدىن تاپقىلى بولمىدى."
+msgstr ""
 
 #: ../libyelp/yelp-error.c:33
 #, c-format
@@ -942,15 +933,13 @@ msgid "An unknown error occurred."
 msgstr "نامەلۇم خاتالىق كۆرۈلدى."
 
 #: ../libyelp/yelp-info-document.c:392
-#, fuzzy, c-format
+#, c-format
 #| msgid ""
 #| "The file ‘%s could not be parsed because it is not a well-formed info "
 #| "page."
 msgid ""
 "The file ‘%s’ could not be parsed because it is not a well-formed info page."
 msgstr ""
-"ھۆججەت ‘%s  نىڭ تۈزۈلۈشى ياخشى بولمىغان ئۇچۇر بېتى بولغاچقا تەھلىل قىلغىلى "
-"بولمىدى."
 
 #: ../libyelp/yelp-location-entry.c:323
 msgid "View"
@@ -962,7 +951,7 @@ msgstr ""
 
 #: ../libyelp/yelp-location-entry.c:339
 msgid "Bookmarks"
-msgstr "خەتكۈچلەر"
+msgstr "خەتكۈش"
 
 #: ../libyelp/yelp-location-entry.c:340
 msgid "A YelpBookmarks implementation instance"
@@ -985,24 +974,22 @@ msgid "Loading"
 msgstr "يۈكلەۋاتىدۇ"
 
 #: ../libyelp/yelp-mallard-document.c:296
-#, fuzzy, c-format
+#, c-format
 #| msgid "The directory ‘%s does not exist."
 msgid "The directory ‘%s’ does not exist."
-msgstr "مۇندەرىجە ‘%s مەۋجۇت ئەمەس."
+msgstr ""
 
 #: ../libyelp/yelp-man-document.c:444
-#, fuzzy, c-format
+#, c-format
 #| msgid ""
 #| "The file ‘%s could not be parsed because it is not a well-formed man page."
 msgid ""
 "The file ‘%s’ could not be parsed because it is not a well-formed man page."
 msgstr ""
-"ھۆججەت ‘%s  نىڭ تۈزۈلۈشى ياخشى بولمىغان قوللانما بېتى بولغاچقا تەھلىل "
-"قىلغىلى بولمىدى."
 
 #: ../libyelp/yelp-settings.c:148
 msgid "GtkSettings"
-msgstr "GtkSettings "
+msgstr "GtkSettings"
 
 #: ../libyelp/yelp-settings.c:149
 msgid "A GtkSettings object to get settings from"
@@ -1010,7 +997,7 @@ msgstr "تەڭشەككە ئېرىشىدىغان GtkSettings جىسىم"
 
 #: ../libyelp/yelp-settings.c:157
 msgid "GtkIconTheme"
-msgstr "GtkIconTheme "
+msgstr "GtkIconTheme"
 
 #: ../libyelp/yelp-settings.c:158
 msgid "A GtkIconTheme object to get icons from"
@@ -1049,10 +1036,10 @@ msgid "The location of the XSLT stylesheet"
 msgstr "XSLT ئۇسلۇب جەدۋىلىنىڭ ئورنى"
 
 #: ../libyelp/yelp-transform.c:379 ../libyelp/yelp-transform.c:394
-#, fuzzy, c-format
+#, c-format
 #| msgid "The XSLT stylesheet ‘%s is either missing or not valid."
 msgid "The XSLT stylesheet ‘%s’ is either missing or not valid."
-msgstr "‘%s دېگەن XSLT stylesheet يوق ياكى ئىناۋەتسىز."
+msgstr ""
 
 #: ../libyelp/yelp-transform.c:528
 msgid "No href attribute found on yelp:document\n"
@@ -1072,7 +1059,7 @@ msgstr "كەينىگە(_B)"
 
 #: ../libyelp/yelp-view.c:128
 msgid "_Forward"
-msgstr "ئالدىنقى(_F)"
+msgstr "ئالدىغا(_F)"
 
 #: ../libyelp/yelp-view.c:133
 msgid "_Previous Page"
@@ -1084,7 +1071,7 @@ msgstr "كېيىنكى بەت(_N)"
 
 #: ../libyelp/yelp-view.c:401
 msgid "Yelp URI"
-msgstr "Yelp URI "
+msgstr "Yelp URI"
 
 #: ../libyelp/yelp-view.c:402
 msgid "A YelpUri with the current location"
@@ -1183,7 +1170,7 @@ msgstr "سىن يوللاش ئورنى(_E)…"
 
 #: ../libyelp/yelp-view.c:1144
 msgid "_Copy Text"
-msgstr "تېكىست كۆچۈر(_C) "
+msgstr "تېكىست كۆچۈر(_C)"
 
 #: ../libyelp/yelp-view.c:1157
 msgid "C_opy Code Block"
@@ -1194,10 +1181,10 @@ msgid "Save Code _Block As..."
 msgstr "كود بۆلىكىنى باشقا ئاتتا ساقلا(_B)…"
 
 #: ../libyelp/yelp-view.c:1333
-#, fuzzy, c-format
+#, c-format
 #| msgid "Could not load a document for ‘%s"
 msgid "Could not load a document for ‘%s’"
-msgstr "‘%s نىڭ پۈتۈكىنى يۈكلىيەلمىدى"
+msgstr ""
 
 #: ../libyelp/yelp-view.c:1339
 #, c-format
@@ -1217,21 +1204,21 @@ msgid "Unknown Error"
 msgstr "نامەلۇم خاتالىق"
 
 #: ../libyelp/yelp-view.c:1507
-#, fuzzy, c-format
+#, c-format
 #| msgid "The URI ‘%s does not point to a valid page."
 msgid "The URI ‘%s’ does not point to a valid page."
-msgstr "‘%s دېگەن URI ئىناۋەتلىك بەتنى كۆرسەتمىدى."
+msgstr ""
 
 #: ../libyelp/yelp-view.c:1513
 #, c-format
 msgid "The URI does not point to a valid page."
-msgstr " URI ئىناۋەتلىك بەتنى كۆرسەتمىگەن."
+msgstr "URI ئىناۋەتلىك بەتنى كۆرسەتمىگەن."
 
 #: ../libyelp/yelp-view.c:1521
-#, fuzzy, c-format
+#, c-format
 #| msgid "The URI ‘%s could not be parsed."
 msgid "The URI ‘%s’ could not be parsed."
-msgstr "‘%s دېگەن URI نى تەھلىل قىلغىلى بولمىدى."
+msgstr ""
 
 #: ../src/yelp-application.c:53
 msgid "Turn on editor mode"
@@ -1266,8 +1253,7 @@ msgstr "ياردەم"
 msgid ""
 "You do not have PackageKit installed. Package installation links require "
 "PackageKit."
-msgstr ""
-"سىز PackageKit نى قاچىلىمىغان. بوغچا ئورنىتىش ئۇلانمىسىغا PackageKit زۆرۈر."
+msgstr "سىز PackageKit نى قاچىلىمىغان. بوغچا ئورنىتىش ئۇلانمىسىغا PackageKit زۆرۈر."
 
 #: ../src/yelp-window.c:267
 msgid "_Page"
@@ -1283,7 +1269,7 @@ msgstr "يۆتكەل(_G)"
 
 #: ../src/yelp-window.c:270
 msgid "_Bookmarks"
-msgstr "خەتكۈچلەر(_B)"
+msgstr "خەتكۈش(_B)"
 
 #: ../src/yelp-window.c:273
 msgid "_New Window"
@@ -1311,11 +1297,11 @@ msgstr "بەتتىن ئىزدە…"
 
 #: ../src/yelp-window.c:307
 msgid "Open Location"
-msgstr "ئورۇننى ئاچ"
+msgstr "تور ئادرېسىنى ئاچ"
 
 #: ../src/yelp-window.c:333
 msgid "Application"
-msgstr "قوللىنىشچان پروگرامما"
+msgstr "پروگرامما"
 
 #: ../src/yelp-window.c:334
 msgid "A YelpApplication instance that controls this window"
@@ -1335,7 +1321,7 @@ msgstr "%s نىڭ خەتكۈچلىرى"
 #, c-format
 msgid "%i match"
 msgid_plural "%i matches"
-msgstr[0] "ماس كەلگىنى %i "
+msgstr[0] "ماس كەلگىنى %i"
 
 #: ../src/yelp-window.c:1356
 msgid "No matches"
@@ -1355,7 +1341,7 @@ msgstr "خەتكۈچنى چىقىرىۋەت(_R)"
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
-msgstr "GNOME ياردىمىگە ئېرىش "
+msgstr "GNOME ياردىمىگە ئېرىش"
 
 #~ msgid "Re_name"
 #~ msgstr "ئاتىنى ئۆزگەرت(_N)"
