[l10n] Updated Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -756,13 +756,13 @@ msgid "GtkSettings"
 msgstr "GtkSettings"
 
 msgid "A GtkSettings object to get settings from"
-msgstr ""
+msgstr "GtkSettings objekt, millelt sätteid hangitakse"
 
 msgid "GtkIconTheme"
 msgstr "GtkIconTheme"
 
 msgid "A GtkIconTheme object to get icons from"
-msgstr ""
+msgstr "GtkIconTheme objekt, millelt ikoone hangitakse"
 
 msgid "Font Adjustment"
 msgstr ""
@@ -896,7 +896,7 @@ msgid "C_opy Code Block"
 msgstr "K_opeeri koodiblokk"
 
 msgid "Save Code _Block As..."
-msgstr "Salvesta koodi_blokk _kui..."
+msgstr "Salvesta koodi_blokk kui..."
 
 #, c-format
 msgid "Could not load a document for ‘%s’"
