--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,35 @@
+Changes in 2.91.8:
+------------------
+* Added support for Mallard Facets extension
+* Don't include line numbers when copying code blocks
+* Added automatica syntax highlighting using jQuery.Syntax
+* Added basic support to list all installed documents
+* Hooked up bookmarks functionality
+* Moved more functionality into libyelp
+* Improvements to info page (Rupert Swarbrick)
+* Updates for API changes in GTK+ 3
+* Updated translations:
+  af           (Friedel Wolff)
+  ca@valencia  (Carles Ferrando)
+  de           (Mario Blättermann)
+  es           (Jorge González)
+  et           (Ivar Smolin)
+  gl           (Fran Diéguez)
+  he           (Yaron Shahrabani)
+  id           (Andika Triwidada)
+  ja           (Takayuki KUSANO)
+  kk           (Baurzhan Muftakhidinov)
+  ko           (Changwoo Ryu)
+  pa           (A S Alam)
+  pt_BR        (Henrique P. Machado)
+  ro           (Daniel Șerbănescu, Lucian Adrian Grijincu)
+  sk           (Laco Gubík)
+  sl           (Matej Urbančič)
+  ug           (Gheyret T.Kenji)
+  zh_CN        (Aron Xu)
+  zh_HK        (Chao-Hsiung Liao)
+  zh_TW        (Chao-Hsiung Liao)
+
 Changes in 2.31.7:
 ------------------
 * Bumped to GTK+ 3.0
