[l10n] Updated Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -15,10 +15,11 @@ msgstr ""
 "Project-Id-Version: yelp MASTER\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
-"POT-Creation-Date: 2010-11-03 00:19+0000\n"
+"POT-Creation-Date: 2010-12-18 22:54+0000\n"
 "PO-Revision-Date: 2010-11-30 10:09+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
+"Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -705,6 +706,10 @@ msgstr "Dokumendist „%s” ei leitud küsitud lehekülge."
 #, c-format
 msgid "An unknown error occurred."
 msgstr "Esines tundmatu viga."
+
+#, fuzzy
+msgid "All Help Documents"
+msgstr "_Kõik dokumendid"
 
 #, c-format
 msgid ""
