--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+Changes in 2.91.9:
+------------------
+* Updates for GTK+ API changes
+* Added URI scheme handler information (Matthias Clasen)
+* Removed custom man parser, using groff output (Rupert Swarbrick)
+* Don't segfault when bookmarking man pages (Rupert Swarbrick)
+* Updated translations:
+  de    (Mario Blättermann)
+  es    (Jorge González)
+  et    (Ivar Smolin)
+  he    (Yaron Shahrabani)
+  nb    (Kjartan Maraas)
+  ug    (Gheyret T.Kenji)
+
 Changes in 2.91.8:
 ------------------
 * Added support for Mallard Facets extension
