--- a/po/et.po
+++ b/po/et.po
@@ -2,21 +2,21 @@
 # Estonian translation of Yelp.
 #
 # Copyright (C) 2002–2006 Free Software Foundation, Inc.
-# Copyright (C) 2007–2010 The GNOME Project
+# Copyright (C) 2007–2011 The GNOME Project
 # This file is distributed under the same license as the Yelp package.
 #
 # Tõivo Leedjärv <toivo@linux.ee>, 2002–2004.
 # Allan Sims <allsi@eau.ee>, 2003.
 # Priit Laes <amd store20 com>, 2005, 2006.
-# Ivar Smolin <okul@linux.ee>, 2005–2010.
+# Ivar Smolin <okul@linux.ee>, 2005–2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp MASTER\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
-"POT-Creation-Date: 2010-12-20 15:47+0000\n"
-"PO-Revision-Date: 2010-12-29 12:25+0200\n"
+"POT-Creation-Date: 2011-01-06 13:30+0000\n"
+"PO-Revision-Date: 2011-01-06 17:47+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -718,7 +718,7 @@ msgstr ""
 "teabeleht (info page)."
 
 msgid "View"
-msgstr ""
+msgstr "Vaade"
 
 msgid "A YelpView instance to control"
 msgstr "Juhtiv YelpView instants"
@@ -727,7 +727,7 @@ msgid "Bookmarks"
 msgstr "Järjehoidjad"
 
 msgid "A YelpBookmarks implementation instance"
-msgstr ""
+msgstr "Instantsi YelpBookmarks implementatsioon"
 
 msgid "Enable Search"
 msgstr "Luba otsing"
@@ -764,16 +764,16 @@ msgid "A size adjustment to add to font sizes"
 msgstr "Kirjatüübi suuruste kohendamine"
 
 msgid "Show Text Cursor"
-msgstr ""
+msgstr "Tekstikursori näitamine"
 
 msgid "Show the text cursor or caret for accessible navigation"
-msgstr ""
+msgstr "Hõlpsama navigeerimise jaoks tekstikursori näitamine"
 
 msgid "Editor Mode"
-msgstr ""
+msgstr "Redaktorirežiim"
 
 msgid "Enable features useful to editors"
-msgstr ""
+msgstr "Tekstiredaktorite kasulike võimaluste lubamine"
 
 msgid "XSLT Stylesheet"
 msgstr "XSLT-laaditabel"
@@ -810,7 +810,7 @@ msgid "Yelp URI"
 msgstr "Yelpi URI"
 
 msgid "A YelpUri with the current location"
-msgstr ""
+msgstr "Praeguse asukoha YelpUri"
 
 msgid "Loading State"
 msgstr "Oleku laadimine"
@@ -825,10 +825,10 @@ msgid "The ID of the root page of the page being viewed"
 msgstr "Vaadeldava juurlehe ID"
 
 msgid "Root Title"
-msgstr ""
+msgstr "Juurlehe pealkiri"
 
 msgid "The title of the root page of the page being viewed"
-msgstr ""
+msgstr "Vaadeldava lehe juurlehe pealkiri"
 
 msgid "Page Title"
 msgstr "Lehe pealkiri"
@@ -847,6 +847,9 @@ msgstr "Lehe ikoon"
 
 msgid "The icon of the page being viewed"
 msgstr "Vaadeldava lehe ikoon"
+
+msgid "You do not have PackageKit. Package install links require PackageKit."
+msgstr "Sul puudub PackageKit. Pakkide paigaldusviidad vajavad PackageKiti."
 
 msgid "Save Image"
 msgstr "Pildi salvestamine"
@@ -899,14 +902,20 @@ msgstr "‘%s’ jaoks pole võimalik dokumenti laadida"
 msgid "Could not load a document"
 msgstr "Dokumenti pole võimalik laadida"
 
-msgid "Not Found"
-msgstr "Ei leitud"
+msgid "Document Not Found"
+msgstr "Dokumenti ei leitud"
+
+msgid "Page Not Found"
+msgstr "Lehekülge ei leitud"
 
 msgid "Cannot Read"
 msgstr "Pole võimalik lugeda"
 
 msgid "Unknown Error"
 msgstr "Tundmatu viga"
+
+msgid "Search for packages containing this document."
+msgstr "Seda dokumenti sisaldavate pakkide otsimine."
 
 #, c-format
 msgid "The URI ‘%s’ does not point to a valid page."
@@ -921,7 +930,7 @@ msgid "The URI ‘%s’ could not be parsed."
 msgstr "URI „%s” pole võimalik analüüsida."
 
 msgid "Turn on editor mode"
-msgstr ""
+msgstr "Redaktorirežiimile lülitumine"
 
 msgid "_Larger Text"
 msgstr "_Suurem tekst"
@@ -936,15 +945,10 @@ msgid "Decrease the size of the text"
 msgstr "Teksti suuruse vähendamine"
 
 msgid "Show Text _Cursor"
-msgstr ""
+msgstr "Näita _tekstikursorit"
 
 msgid "Help"
 msgstr "Abi"
-
-msgid ""
-"You do not have PackageKit installed. Package installation links require "
-"PackageKit."
-msgstr ""
 
 msgid "_Page"
 msgstr "_Leht"
@@ -1139,9 +1143,6 @@ msgstr "Abistab GNOME kasutamisel"
 
 #~ msgid "Help Topics"
 #~ msgstr "Abiteabe teemad"
-
-#~ msgid "Document Sections"
-#~ msgstr "Dokumendi jaotised"
 
 #~ msgid "File not found"
 #~ msgstr "Faili ei leitud"
@@ -1347,9 +1348,6 @@ msgstr "Abistab GNOME kasutamisel"
 #~ msgid "Unable to load page"
 #~ msgstr "Lehekülge pole võimalik laadida"
 
-#~ msgid "Search for other documentation"
-#~ msgstr "Otsi muud dokumentatsiooni"
-
 #~ msgid "Cannot create search component"
 #~ msgstr "Otsingukomponenti pole võimalik luua"
 
@@ -1371,13 +1369,6 @@ msgstr "Abistab GNOME kasutamisel"
 #~ msgstr ""
 #~ "Faili „%s” pole võimalik lugeda.  Seda kas pole olemas või pole sul selle "
 #~ "lugemiseks piisavalt õiguseid."
-
-#~ msgid "translator-credits"
-#~ msgstr ""
-#~ "Tõivo Leedjärv <toivo@linux.ee>, 2002–2004.\n"
-#~ "Allan Sims <allsi@eau.ee>, 2003.\n"
-#~ "Priit Laes <amd@store20.com>, 2005, 2006.\n"
-#~ "Ivar Smolin <okul@linux.ee>, 2005–2010."
 
 #~ msgid "A documentation browser and viewer for the Gnome Desktop."
 #~ msgstr "Dokumentatsioonisirvija Gnome töölaua jaoks."
