[l10n] Updated Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
 "POT-Creation-Date: 2011-01-06 13:30+0000\n"
-"PO-Revision-Date: 2011-01-06 17:47+0200\n"
+"PO-Revision-Date: 2011-01-08 15:09+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -685,7 +685,7 @@ msgid ""
 "The file ‘%s’ could not be parsed because it is not a well-formed XML "
 "document."
 msgstr ""
-"Faili „%s” pole võimalik analüüsida kuna see pole korrektselt vormindatud "
+"Faili „%s” pole võimalik analüüsida, kuna see pole korrektselt vormindatud "
 "XML-dokument."
 
 #, c-format
@@ -693,7 +693,7 @@ msgid ""
 "The file ‘%s’ could not be parsed because one or more of its included files "
 "is not a well-formed XML document."
 msgstr ""
-"Faili „%s” pole võimalik analüüsida kuna üks või rohkem selle poolt kaasatud "
+"Faili „%s” pole võimalik analüüsida, kuna üks või rohkem selle poolt kaasatud "
 "faili pole korrektselt vormindatud XML-dokumendid."
 
 msgid "Unknown"
@@ -714,7 +714,7 @@ msgstr "Kõik abidokumendid"
 msgid ""
 "The file ‘%s’ could not be parsed because it is not a well-formed info page."
 msgstr ""
-"Faili „%s” pole võimalik analüüsida kuna see pole korrektselt vormindatud "
+"Faili „%s” pole võimalik analüüsida, kuna see pole korrektselt vormindatud "
 "teabeleht (info page)."
 
 msgid "View"
@@ -1018,13 +1018,6 @@ msgstr "_Eemalda järjehoidja"
 msgid "Get help with GNOME"
 msgstr "Abistab GNOME kasutamisel"
 
-#~ msgid ""
-#~ "The file ‘%s’ could not be parsed because it is not a well-formed man "
-#~ "page."
-#~ msgstr ""
-#~ "Faili „%s” pole võimalik analüüsida kuna see pole käsiraamatu korrektselt "
-#~ "vormindatud leht (man page)."
-
 #~ msgid "Description Column"
 #~ msgstr "Kirjelduse veerg"
 
@@ -1252,13 +1245,6 @@ msgstr "Abistab GNOME kasutamisel"
 
 #~ msgid "The requested page was not found in the TOC."
 #~ msgstr "Küsitud lehekülge sisukorras ei leitud."
-
-#~ msgid ""
-#~ "The TOC file could not be parsed because it is not a well-formed XML "
-#~ "document."
-#~ msgstr ""
-#~ "Sisukorda pole võimalik analüüsida kuna see pole korrektselt vormindatud "
-#~ "XML-dokument."
 
 #~ msgid "Broken Transformation"
 #~ msgstr "Katkine teisendus"
