Updated Galician translations

--- a/po/gl.po
+++ b/po/gl.po
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-01-09 17:20+0100\n"
-"PO-Revision-Date: 2011-01-09 17:20+0100\n"
+"POT-Creation-Date: 2011-01-09 23:51+0100\n"
+"PO-Revision-Date: 2011-01-09 23:51+0100\n"
 "Last-Translator: Fran Diéguez <frandieguez@ubuntu.com>\n"
 "Language-Team: Galician <gnome-gl-list@gnome.org>\n"
 "Language: gl\n"
@@ -1129,7 +1129,6 @@ msgid "The icon of the page being viewed"
 msgstr "A icona da páxina que está vendo"
 
 #: ../libyelp/yelp-view.c:712
-#, fuzzy
 msgid "You do not have PackageKit. Package install links require PackageKit."
 msgstr ""
 "O seu sistema non ten PackageKit instalado. As ligazóns de instalación de "
@@ -1201,14 +1200,12 @@ msgid "Could not load a document"
 msgstr "Non foi posíbel cargar un documento"
 
 #: ../libyelp/yelp-view.c:1622
-#, fuzzy
 msgid "Document Not Found"
-msgstr "Non se encontrou"
+msgstr "Documento non encontrado"
 
 #: ../libyelp/yelp-view.c:1624
-#, fuzzy
 msgid "Page Not Found"
-msgstr "Non se encontrou"
+msgstr "Páxina non encontrada"
 
 #: ../libyelp/yelp-view.c:1627
 msgid "Cannot Read"
@@ -1220,7 +1217,7 @@ msgstr "Erro descoñecido"
 
 #: ../libyelp/yelp-view.c:1653
 msgid "Search for packages containing this document."
-msgstr ""
+msgstr "Buscar os paquetes que conteñen este documento."
 
 #: ../libyelp/yelp-view.c:1806
 #, c-format
