--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
 "POT-Creation-Date: 2011-01-06 13:30+0000\n"
-"PO-Revision-Date: 2011-01-08 15:09+0200\n"
+"PO-Revision-Date: 2011-01-10 15:33+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -721,7 +721,7 @@ msgid "View"
 msgstr "Vaade"
 
 msgid "A YelpView instance to control"
-msgstr "Juhtiv YelpView instants"
+msgstr "Juhitav YelpView instants"
 
 msgid "Bookmarks"
 msgstr "Järjehoidjad"
