--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+Changes in 2.91.10:
+------------------
+* Fixed some issues with previous/next links
+* Better indents and margin in man pages (Rupert Swarbrick)
+* Handle links in man pages (Rupert Swarbrick)
+* Improvements in how error pages are handled
+* Auto-install packages for missing documents
+* Set busy cursor when page is loading
+* Updated translations:
+  ar    (Khaled Hosny)
+  es    (Jorge González)
+  et    (Ivar Smolin)
+  gl    (Fran Diéguez)
+  he    (Yaron Shahrabani)
+  id    (Andika Triwidada)
+  sl    (Matej Urbančič)
+  sv    (Daniel Nylander)
+
 Changes in 2.91.9:
 ------------------
 * Updates for GTK+ API changes
